--- a/client/src/App.css
+++ b/client/src/App.css
@@ -147,3 +147,58 @@ a {
   text-decoration: none
 }
 
+.chat-box {
+  background-color: #fffffa;
+  height: 400px;
+  width: 400px;
+  overflow-y: auto;
+  padding: 10px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.chat-text-field {
+  width: 400px;
+  height: 50px;
+  resize: none;
+  margin: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  overflow-y: auto;
+  background-color: #fffffa;
+  border: 2px solid #c48d3f
+}
+
+.chat-submit {
+  cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: #c48d3f;
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  }
+
+  .chat-user {
+    text-align: right
+  }
+
+  .chat-other {
+    text-align: left
+  }
+
+
