--- a/client/src/App.css
+++ b/client/src/App.css
@@ -154,6 +154,7 @@ a {
   overflow-y: auto;
   padding: 10px;
   margin: auto;
+  margin-top:20px; 
   display: flex;
   flex-direction: column;
 
@@ -223,4 +224,38 @@ a {
     border-radius: 50%;
   }
 
+    /* Add a black background color to the top navigation */
+  .topnav {
+    background-color: #333;
+    overflow: hidden;
+    padding-right: 100px;
+    padding-left: 100px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 2000px;
+    height: 50px;
+  }
+
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 16px 20px;
+    text-decoration: none;
+    font-size: 20px;
+  }
+
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
 
