--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,7 +83,6 @@ background: rgba(136, 126, 126, 0.04);
 padding: 10px 20px;
 border: none;
 border-radius: 20px;
-outline: none;
 box-sizing: border-box;
 border: 2px solid rgba(0, 0, 0, 0.02);
 margin-bottom: 50px;
@@ -91,7 +90,11 @@ margin-left: 46px;
 text-align: center;
 margin-bottom: 27px;
 font-family: 'Ubuntu', sans-serif;
+
 }
+
+
+
 
 form.form1 {
   padding-top: 40px;
@@ -119,7 +122,8 @@ font-family: 'Ubuntu', sans-serif;
 
 
 .un:focus, .pass:focus {
-  border: 2px solid rgba(0, 0, 0, 0.18) !important;
+  outline:none;
+  box-shadow: 0 0 3pt 2pt black !important;
   
 }
 
@@ -272,7 +276,8 @@ a {
   }
 
   .form-group:focus{
-     outline: 0;
+     outline: none;
+     
   }
 
 
