--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,11 +48,29 @@ body {
 
 .signin-main {
   background-color: #FFFFFF;
-  width: 400px;
-  height: 400px;
+  width: 410px;
+  height: 625px;
   margin: 7em auto;
   border-radius: 1.5em;
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+.signin-in {
+    background-color: #FFFFFF;
+    width: 420px;
+    height: 350px;
+    margin: 7em auto;
+    border-radius: 1em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+.editAcc {
+    background-color: #FFFFFF;
+    width: 420px;
+    height: 450px;
+    margin: 7em auto;
+    border-radius: 1em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
 .sign {
