--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,6 +65,15 @@ body {
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
+.add-post {
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 475px;
+    margin: 5em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
 .signin-in {
     background-color: #FFFFFF;
     width: 420px;
