--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,7 +61,7 @@ body {
 .signout-main {
   background-color: #FFFFFF;
   width: 400px;
-  height: 625px;
+  height: 670px;
   margin: 7em auto;
   border-radius: 1.5em;
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
@@ -150,6 +150,11 @@ form.form1 {
     border: 2px solid rgba(0, 0, 0, 0.18) !important;
 }
 
+.center {
+  display: block;
+  margin: auto;
+  text-align: center;
+}
 
 .submit {
 cursor: pointer;
@@ -171,12 +176,10 @@ cursor: pointer;
   background: none!important;
   border: none;
   padding: 0!important;
-  position: absolute;
-  left: 26%;
   /*optional*/
   font-family: arial, sans-serif;
   /*input has OS specific font-family*/
-  color: #c48d3f;
+  color: #c28a35;
   text-decoration: underline;
   cursor: pointer;
 }
